--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,12 +6,15 @@
 Variables
 **************/
 $tan: #F5F5F1;
+$lighttan: #FBFBFA;
 $blue: #39AAC5;
+$darkblue: #1692B3;
 $orange: #F45800;
 $green: #78C042;
 $white: #FFFFFF;
 $black: #555555;
-$gray :#B2B2B2;
+$gray: #B2B2B2;
+$lightgray: #EEEEEE;
 
 /**************
 General
@@ -19,6 +22,7 @@ General
 
 body {
   background: $tan;
+  font-family: 'Roboto', sans-serif;
 }
 
 main {
@@ -27,11 +31,16 @@ main {
   height: 500px;
 }
 
+
 .button {
   width: 80px;
   height: 35px;
   background: transparent;
   margin-left: 20px;
+  outline: none;
+  border-radius: 5px;
+  font-size: 14px;
+  box-shadow: none;
 }
 
 /**************
@@ -55,17 +64,68 @@ nav {
 
 .logo {
   color: $orange;
-  font-size: 38px;
-  font-family: Arial;
+  font-size: 42px;
+  font-family: 'Gentium Book Basic', serif;
   float: left;
   padding-top: 15px;
-  margin-right: 10px;
+  margin-right: 20px;
+}
+
+#search {
+  position: relative;
+  background: $blue;
+  color: $white;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  margin-left: 0;
+  left: -6px;
+  top: -1.5px;
+  border-left: none;
+  font-weight: 700;
+}
+
+#browse {
+  border: 1px solid $lightgray;
+}
+
+#register {
+  border: none;
+  color: $darkblue;
+  width: 60px;
+}
+
+#signIn {
+  border: 1px solid $darkblue;
+  color: $blue;
+  width: 60px;
+}
+
+#cart {
+  background-color: #FFFFFF;
+  height: 40px;
+  width: 40px;
+  padding-left: 15px;
+  margin-left: 15px;
+  border-top: none;
+  border-right: none;
+  border-bottom: none;
+  border-left: 1px solid #EEEEEE;
+  font-size: 12px;
+
+  img {
+    height: 22px;
+  }
 }
 
 header nav input {
   margin-top: 22px;
   width: 260px;
   height: 35px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  box-shadow: inset 0 0 2px $lightgray;
+  background: $lighttan;
+  border: 1px solid $gray;
 }
 
 .loginWrapper {
@@ -121,12 +181,12 @@ Result
 **************/
 
 .contentImg {
-  height: 175px;
+  height: 170px;
   background: $tan;
 }
 
 .contentDisc {
-  height: 45px;
+  height: 50px;
 }
 
 .user {
