--- a/styles/main.css
+++ b/styles/main.css
@@ -72,12 +72,11 @@ nav::after {
   position: relative;
   background: #39AAC5;
   color: #FFFFFF;
+  border: 1px solid #1692B3;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   margin-left: 0;
   left: -6px;
-  top: -1.5px;
-  border-left: none;
   font-size: 16px;
   font-weight: 700; }
 
@@ -85,8 +84,8 @@ nav::after {
   border: 1px solid #EEEEEE; }
 
 #register {
-  border: none;
   color: #1692B3;
+  border: none;
   width: 60px; }
 
 #signIn {
@@ -109,15 +108,23 @@ nav::after {
 #cart img {
   height: 22px; }
 
-header nav input {
+.searchText {
+  font-size: 14px;
+  box-shadow: inset 0 0 2px #EEEEEE;
+  background: #FBFBFA;
+  border: 1px solid #B2B2B2;
   margin-top: 22px;
+  padding-left: 8px;
   width: 260px;
   height: 35px;
   border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-  box-shadow: inset 0 0 2px #EEEEEE;
-  background: #FBFBFA;
-  border: 1px solid #B2B2B2; }
+  border-bottom-left-radius: 5px; }
+
+.searchText:focus {
+  outline: none;
+  box-shadow: none;
+  background: #FFFFFF;
+  border: 1px solid #1692B3; }
 
 .loginWrapper {
   float: right;
@@ -167,11 +174,11 @@ li {
   display: block;
   margin-right: 2.35765%;
   width: 31.76157%;
-  height: 220px;
   background: #FFFFFF;
-  margin: 0 5px 10px;
   border: 1px solid #B2B2B2;
-  font-size: 16px; }
+  font-size: 16px;
+  height: 220px;
+  margin: 0 5px 10px; }
 
 li:last-child {
   margin-right: 0; }
