--- a/styles/main.scss
+++ b/styles/main.scss
@@ -75,12 +75,11 @@ nav {
   position: relative;
   background: $blue;
   color: $white;
+  border: 1px solid $darkblue;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   margin-left: 0;
   left: -6px;
-  top: -1.5px;
-  border-left: none;
   font-size: 16px;
   font-weight: 700;
 }
@@ -90,8 +89,8 @@ nav {
 }
 
 #register {
-  border: none;
   color: $darkblue;
+  border: none;
   width: 60px;
 }
 
@@ -118,15 +117,24 @@ nav {
   }
 }
 
-header nav input {
+.searchText {
+  font-size: 14px;
+  box-shadow: inset 0 0 2px $lightgray;
+  background: $lighttan;
+  border: 1px solid $gray;
   margin-top: 22px;
+  padding-left: 8px;
   width: 260px;
   height: 35px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  box-shadow: inset 0 0 2px $lightgray;
-  background: $lighttan;
-  border: 1px solid $gray;
+}
+
+.searchText:focus {
+  outline: none;
+  box-shadow: none;
+  background: $white;
+  border: 1px solid $darkblue;
 }
 
 .loginWrapper {
@@ -161,11 +169,11 @@ ul {
 
 li {
   @include span-columns(4);
-  height: 220px;
   background: $white;
-  margin: 0 5px 10px;
   border: 1px solid $gray;
   font-size: 16px;
+  height: 220px;
+  margin: 0 5px 10px;
 }
 
 .contentImg {
