--- a/styles/main.css
+++ b/styles/main.css
@@ -20,8 +20,7 @@ main {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 60px;
-  height: 500px; }
+  margin-top: 60px; }
 
 main::after {
   clear: both;
@@ -139,7 +138,7 @@ aside {
   margin-right: 2.35765%;
   width: 23.23176%;
   background: #FFFFFF;
-  height: 100%;
+  height: 500px;
   border: 1px solid #B2B2B2; }
 
 aside:last-child {
@@ -159,15 +158,7 @@ section:last-child {
   margin-right: 0; }
 
 ul {
-  max-width: 68em;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 0; }
-
-ul::after {
-  clear: both;
-  content: "";
-  display: table; }
 
 li {
   float: left;
@@ -177,14 +168,21 @@ li {
   background: #FFFFFF;
   border: 1px solid #B2B2B2;
   font-size: 16px;
-  height: 220px;
-  margin: 0 5px 10px; }
+  margin-bottom: 20px;
+  width: 255px;
+  height: 240px; }
 
 li:last-child {
   margin-right: 0; }
 
+li:nth-child(3n) {
+  margin-right: 0; }
+
+li:nth-child(3n+1) {
+  clear: left; }
+
 .contentImg {
-  height: 170px;
+  height: 190px;
   background: #F5F5F1; }
 
 .contentDesc {
@@ -193,8 +191,12 @@ li:last-child {
 /**************
 Result
 **************/
+#content li {
+  width: 255px;
+  height: 240px; }
+
 .contentImg {
-  height: 170px;
+  width: 100%;
   background: #F5F5F1; }
 
 .contentDesc {
