--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,7 +28,6 @@ body {
 main {
   @include outer-container;
   margin-top: 60px;
-  height: 500px;
 }
 
 
@@ -150,7 +149,7 @@ Aside
 aside {
   @include span-columns(3);
   background: $white;
-  height: 100%;
+  height: 500px;
   border: 1px solid $gray;
 }
 
@@ -164,21 +163,22 @@ section {
 }
 
 ul {
-  @include outer-container;
   margin-top: 0;
 }
 
 li {
   @include span-columns(4);
+  @include omega(3n);
   background: $white;
   border: 1px solid $gray;
   font-size: 16px;
-  height: 220px;
-  margin: 0 5px 10px;
+  margin-bottom: 20px;
+  width: 255px;
+  height: 240px;
 }
 
 .contentImg {
-  height: 170px;
+  height: 190px;
   background: $tan;
 }
 
@@ -189,9 +189,13 @@ li {
 /**************
 Result
 **************/
+#content li {
+  width: 255px;
+  height: 240px;
+}
 
 .contentImg {
-  height: 170px;
+  width: 100%;
   background: $tan;
 }
 
