--- a/styles/main.css
+++ b/styles/main.css
@@ -176,7 +176,7 @@ li {
   font-size: 16px;
   margin-bottom: 20px;
   width: 255px;
-  height: 240px;
+  height: 245px;
   font-size: 13px; }
 
 li:last-child {
@@ -190,13 +190,13 @@ li:nth-child(3n+1) {
 
 li img {
   height: 190px;
-  width: 255px; }
+  width: 100%; }
 
 /**************
 Result
 **************/
 .contentImg {
-  object-fit: cover; }
+  object-fit: fill; }
 
 .title {
   width: 250px;
@@ -205,10 +205,12 @@ Result
   white-space: nowrap; }
 
 .user {
-  float: left; }
+  float: left;
+  color: #B2B2B2; }
 
 .price {
-  float: right; }
+  float: right;
+  color: #78C042; }
 
 /**************
 Footer
