--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,11 +31,17 @@ body {
 
 main {
   @include outer-container;
-  margin-top: 60px;
+  margin-top: 30px;
+}
+
+a {
+  color: $darkblue;
+  text-decoration: none;
 }
 
 p {
-  margin: 5px;
+  font-size: 13px;
+  margin: 5px 7px;
 }
 
 .button {
@@ -155,14 +161,26 @@ Aside
 
 aside {
   @include span-columns(3);
+}
+
+dl {
   background: $white;
   height: 500px;
   border: 1px solid $gray;
+  margin: 0;
 }
 
 /**************
 Content
 **************/
+
+#resultsLine {
+  float: left;
+}
+
+#sortBy {
+  float: right;
+}
 
 section {
   @include span-columns(9);
@@ -170,7 +188,7 @@ section {
 }
 
 ul {
-  margin-top: 0;
+  margin: 0;
 }
 
 li {
@@ -178,15 +196,17 @@ li {
   @include omega(3n);
   background: $white;
   border: 1px solid $gray;
+  border-radius: 3px;
   font-size: 16px;
   margin-bottom: 20px;
   width: 255px;
-  height: 245px;
-  font-size: 13px;
+  height: 250px;
 
   img {
     height: 190px;
     width: 100%;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
   }
 }
 
@@ -195,23 +215,25 @@ li {
 Result
 **************/
 
-.contentImg {
+#contentImg {
   object-fit: fill;
 }
 
-.title {
-  width: 250px;
+#title {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.user {
+#user {
   float: left;
   color: $gray;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.price {
+#price {
   float: right;
   color: $green;
 }
