--- a/styles/main.css
+++ b/styles/main.css
@@ -38,6 +38,11 @@ p {
   font-size: 13px;
   margin: 5px 7px; }
 
+.active {
+  color: #555555;
+  font-weight: 700;
+  margin-left: -15px; }
+
 .button {
   width: 80px;
   height: 35px;
@@ -109,7 +114,7 @@ nav::after {
   font-weight: 700; }
 
 #browse {
-  border: 1px solid #EEEEEE; }
+  border: 1px solid #E1E3DF; }
 
 #register {
   color: #1692B3;
@@ -154,9 +159,15 @@ aside:last-child {
 
 dl {
   background: #FFFFFF;
-  height: 500px;
-  border: 1px solid #B2B2B2;
-  margin: 0; }
+  height: 450px;
+  border: 1px solid #E1E3DF;
+  border-radius: 3px;
+  margin: 0;
+  padding: 20px 0 20px 30px; }
+
+dt {
+  padding-bottom: 10px;
+  font-size: 14px; }
 
 /**************
 Content
@@ -186,7 +197,7 @@ li {
   margin-right: 2.35765%;
   width: 31.76157%;
   background: #FFFFFF;
-  border: 1px solid #B2B2B2;
+  border: 1px solid #E1E3DF;
   border-radius: 3px;
   font-size: 16px;
   margin-bottom: 20px;
