--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,7 +14,7 @@ $green: #78C042;
 $white: #FFFFFF;
 $black: #555555;
 $gray: #B2B2B2;
-$lightgray: #EEEEEE;
+$lightgray: #E1E3DF;
 
 /**************
 General
@@ -42,6 +42,12 @@ a {
 p {
   font-size: 13px;
   margin: 5px 7px;
+}
+
+.active {
+  color: $black;
+  font-weight: 700;
+  margin-left: -15px;
 }
 
 .button {
@@ -165,9 +171,16 @@ aside {
 
 dl {
   background: $white;
-  height: 500px;
-  border: 1px solid $gray;
+  height: 450px;
+  border: 1px solid $lightgray;
+  border-radius: 3px;
   margin: 0;
+  padding: 20px 0 20px 30px;
+}
+
+dt {
+  padding-bottom: 10px;
+  font-size: 14px;
 }
 
 /**************
@@ -195,7 +208,7 @@ li {
   @include span-columns(4);
   @include omega(3n);
   background: $white;
-  border: 1px solid $gray;
+  border: 1px solid $lightgray;
   border-radius: 3px;
   font-size: 16px;
   margin-bottom: 20px;
