category updater working

--- a/styles/main.css
+++ b/styles/main.css
@@ -172,6 +172,10 @@ dt {
 /**************
 Content
 **************/
+#resultsCat {
+  float: left;
+  margin-right: 0; }
+
 #resultsLine {
   float: left; }
 
