icon JS working

--- a/styles/main.css
+++ b/styles/main.css
@@ -200,6 +200,7 @@ li {
   display: block;
   margin-right: 2.35765%;
   width: 31.76157%;
+  position: relative;
   background: #FFFFFF;
   border: 1px solid #E1E3DF;
   border-radius: 3px;
@@ -218,11 +219,31 @@ li:nth-child(3n+1) {
   clear: left; }
 
 li img {
-  position: relative;
   height: 190px;
   width: 100%;
   border-top-left-radius: 2px;
   border-top-right-radius: 2px; }
+
+.socialRow {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-right: 2px; }
+
+.socialBtn {
+  background-color: #FFFFFF;
+  border: 1px solid #B2B2B2;
+  margin: 5px 2px 0;
+  padding: 4px;
+  height: 25px;
+  width: 25px;
+  border-radius: 3px; }
+
+.socialFav {
+  background-image: url(../images/heart.png);
+  background-size: cover;
+  height: 15px;
+  width: 15px; }
 
 /**************
 Result
