--- a/styles/main.scss
+++ b/styles/main.scss
@@ -250,6 +250,10 @@ li {
   border-radius: 3px;
   opacity: 0;
   transition: all .2s ease;
+
+  &:hover {
+    box-shadow: 0px 1px 2px $black;
+  }
 }
 
 .socialFav {
