--- a/styles/main.css
+++ b/styles/main.css
@@ -34,6 +34,9 @@ a {
   color: #1692B3;
   text-decoration: none; }
 
+a:hover {
+  text-decoration: underline; }
+
 p {
   font-size: 13px;
   margin: 5px 7px; }
@@ -157,17 +160,96 @@ aside {
 aside:last-child {
   margin-right: 0; }
 
-dl {
+dl, .refine {
   background: #FFFFFF;
-  height: 450px;
+  min-height: 450px;
   border: 1px solid #E1E3DF;
   border-radius: 3px;
-  margin: 0;
+  margin: 10px 0 25px 0;
   padding: 20px 0 20px 30px; }
 
 dt {
   padding-bottom: 10px;
   font-size: 14px; }
+
+/**************
+Refine section
+**************/
+.refine {
+  padding: 0 10px; }
+
+.refine p {
+  font-size: 14px; }
+
+.rad {
+  margin-left: 8px;
+  margin-bottom: 15px; }
+
+.rad a {
+  margin-left: 10px; }
+
+.refsec {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #E1E3DF; }
+
+.pricer input {
+  display: inline-block;
+  height: 40px;
+  width: 70px;
+  margin: 10px 0;
+  padding-left: 10px;
+  border: 1px solid #E1E3DF;
+  border-radius: 3px; }
+
+.highlow:focus {
+  outline: none;
+  box-shadow: none;
+  background: #FFFFFF;
+  border: 1px solid #1692B3; }
+
+.priceTo {
+  display: inline-block;
+  font-size: 14px;
+  margin: 8px; }
+
+#rightArrow {
+  padding: 0;
+  width: 40px;
+  background-color: #FFFFFF; }
+
+#rightArrow:hover {
+  background-color: #F5F5F1; }
+
+.filtRed, .filtOrange, .filtYellow, .filtGreen, .filtBlue, .filtPurple, .filtBlack, .filtWhite {
+  display: inline-block;
+  height: 22px;
+  width: 22px;
+  margin: 10px 1px;
+  border: 1px solid #E1E3DF;
+  border-radius: 3px;
+  background-color: red; }
+
+.filtOrange {
+  background-color: orange; }
+
+.filtYellow {
+  background-color: yellow; }
+
+.filtGreen {
+  background-color: green; }
+
+.filtBlue {
+  background-color: blue; }
+
+.filtPurple {
+  background-color: purple; }
+
+.filtBlack {
+  background-color: black; }
+
+.filtWhite {
+  background-color: white; }
 
 /**************
 Content
@@ -205,6 +287,7 @@ li {
   border: 1px solid #E1E3DF;
   border-radius: 3px;
   font-size: 16px;
+  margin-top: 10px;
   margin-bottom: 20px;
   width: 255px;
   height: 250px; }
@@ -270,9 +353,6 @@ Result
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap; }
-
-#title:hover {
-  text-decoration: underline; }
 
 #user {
   float: left;
